--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="contact-info">
                         <h2>Nahida</h2>
-                        <p>nahida.buer@email.com.br</p>
+                        <p>nahida.kusanali@email.com.br</p>
                     </div>
                     <div class="contact-icons">
                         <span class="material-symbols-outlined">delete</span>
