color and infos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="contact-info">
                         <h2>Nahida</h2>
-                        <p>nahida@email.com.br</p>
+                        <p>nahida.sumeru@email.com.br</p>
                     </div>
                     <div class="contact-icons">
                         <span class="material-symbols-outlined">delete</span>
@@ -31,11 +31,11 @@
                 </div>
                 <div class="contacts">
                     <div class="contact-5star-img">
-                        <img src="/imgs/nahida.png" alt="Nahida">
+                        <img src="/imgs/furina.png" alt="Nahida">
                     </div>
                     <div class="contact-info">
-                        <h2>Nahida</h2>
-                        <p>nahida.kusanali@email.com.br</p>
+                        <h2>Furina</h2>
+                        <p>furina.fontaine@email.com.br</p>
                     </div>
                     <div class="contact-icons">
                         <span class="material-symbols-outlined">delete</span>
@@ -44,11 +44,11 @@
                 </div>
                 <div class="contacts">
                     <div class="contact-5star-img">
-                        <img src="/imgs/nahida.png" alt="Nahida">
+                        <img src="/imgs/ayaka.png" alt="Nahida">
                     </div>
                     <div class="contact-info">
-                        <h2>Nahida</h2>
-                        <p>nahida.buer@email.com.br</p>
+                        <h2>Kamisato Ayaka</h2>
+                        <p>ayaka.inazuma@email.com.br</p>
                     </div>
                     <div class="contact-icons">
                         <span class="material-symbols-outlined">delete</span>
@@ -57,11 +57,11 @@
                 </div>
                 <div class="contacts">
                     <div class="contact-5star-img">
-                        <img src="/imgs/nahida.png" alt="Nahida">
+                        <img src="/imgs/xianyun.png" alt="Nahida">
                     </div>
                     <div class="contact-info">
-                        <h2>Nahida</h2>
-                        <p>nahida.buer@email.com.br</p>
+                        <h2>Xianyun</h2>
+                        <p>xianyun.liyue@email.com.br</p>
                     </div>
                     <div class="contact-icons">
                         <span class="material-symbols-outlined">delete</span>
@@ -69,12 +69,12 @@
                     </div>
                 </div>
                 <div class="contacts">
-                    <div class="contact-5star-img">
-                        <img src="/imgs/nahida.png" alt="Nahida">
+                    <div class="contact-4star-img">
+                        <img src="/imgs/chevreuse.png" alt="Nahida">
                     </div>
                     <div class="contact-info">
-                        <h2>Nahida</h2>
-                        <p>nahida.buer@email.com.br</p>
+                        <h2>Chevreuse</h2>
+                        <p>chevreuse.fontaine@email.com.br</p>
                     </div>
                     <div class="contact-icons">
                         <span class="material-symbols-outlined">delete</span>
@@ -82,12 +82,12 @@
                     </div>
                 </div>
                 <div class="contacts">
-                    <div class="contact-5star-img">
-                        <img src="/imgs/nahida.png" alt="Nahida">
+                    <div class="contact-4star-img">
+                        <img src="/imgs/fischl.png" alt="Nahida">
                     </div>
                     <div class="contact-info">
-                        <h2>Nahida</h2>
-                        <p>nahida.buer@email.com.br</p>
+                        <h2>Fischl</h2>
+                        <p>fischl.goldenapplearchipelog@email.com.br</p>
                     </div>
                     <div class="contact-icons">
                         <span class="material-symbols-outlined">delete</span>
