--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <main>
         <div class="main-container">
             <h1>Lista de Contatos</h1>
-            <div class="contact-container">
-                <div class="contacts">
+            <ul class="contact-container">
+                <li class="contacts">
                     <div class="contact-5star-img">
                         <img src="/imgs/nahida.png" alt="Nahida">
                     </div>
@@ -28,8 +28,8 @@
                         <span class="material-symbols-outlined">delete</span>
                         <span class="material-symbols-outlined">edit_square</span>
                     </div>
-                </div>
-                <div class="contacts">
+                </li>
+                <li class="contacts">
                     <div class="contact-5star-img">
                         <img src="/imgs/furina.png" alt="Nahida">
                     </div>
@@ -41,8 +41,8 @@
                         <span class="material-symbols-outlined">delete</span>
                         <span class="material-symbols-outlined">edit_square</span>
                     </div>
-                </div>
-                <div class="contacts">
+                </li>
+                <li class="contacts">
                     <div class="contact-5star-img">
                         <img src="/imgs/ayaka.png" alt="Nahida">
                     </div>
@@ -54,8 +54,8 @@
                         <span class="material-symbols-outlined">delete</span>
                         <span class="material-symbols-outlined">edit_square</span>
                     </div>
-                </div>
-                <div class="contacts">
+                </li>
+                <li class="contacts">
                     <div class="contact-5star-img">
                         <img src="/imgs/xianyun.png" alt="Nahida">
                     </div>
@@ -67,8 +67,8 @@
                         <span class="material-symbols-outlined">delete</span>
                         <span class="material-symbols-outlined">edit_square</span>
                     </div>
-                </div>
-                <div class="contacts">
+                </li>
+                <li class="contacts">
                     <div class="contact-4star-img">
                         <img src="/imgs/chevreuse.png" alt="Nahida">
                     </div>
@@ -80,21 +80,21 @@
                         <span class="material-symbols-outlined">delete</span>
                         <span class="material-symbols-outlined">edit_square</span>
                     </div>
-                </div>
-                <div class="contacts">
+                </li>
+                <li class="contacts">
                     <div class="contact-4star-img">
                         <img src="/imgs/fischl.png" alt="Nahida">
                     </div>
                     <div class="contact-info">
                         <h2>Fischl</h2>
-                        <p>fischl.goldenapplearchipelog@email.com.br</p>
+                        <p>fischl.goldenapplearchipelogo@email.com.br</p>
                     </div>
                     <div class="contact-icons">
                         <span class="material-symbols-outlined">delete</span>
                         <span class="material-symbols-outlined">edit_square</span>
                     </div>
-                </div>
-            </div>
+                </li>
+            </ul>
         </div>
     </main>
 </body>
