--- a/index.html
+++ b/index.html
@@ -25,73 +25,73 @@
                         <p>nahida.sumeru@email.com.br</p>
                     </div>
                     <div class="contact-icons">
-                        <span class="material-symbols-outlined">delete</span>
-                        <span class="material-symbols-outlined">edit_square</span>
+                        <a href="#"><span class="material-symbols-outlined">delete</span></a>
+                        <a href="#"><span class="material-symbols-outlined">edit_square</span></a>
                     </div>
                 </li>
                 <li class="contacts">
                     <div class="contact-5star-img">
-                        <img src="/imgs/furina.png" alt="Nahida">
+                        <img src="/imgs/furina.png" alt="Furina">
                     </div>
                     <div class="contact-info">
                         <h2>Furina</h2>
                         <p>furina.fontaine@email.com.br</p>
                     </div>
                     <div class="contact-icons">
-                        <span class="material-symbols-outlined">delete</span>
-                        <span class="material-symbols-outlined">edit_square</span>
+                        <a href="#"><span class="material-symbols-outlined">delete</span></a>
+                        <a href="#"><span class="material-symbols-outlined">edit_square</span></a>
                     </div>
                 </li>
                 <li class="contacts">
                     <div class="contact-5star-img">
-                        <img src="/imgs/ayaka.png" alt="Nahida">
+                        <img src="/imgs/ayaka.png" alt="Ayaka">
                     </div>
                     <div class="contact-info">
                         <h2>Kamisato Ayaka</h2>
                         <p>ayaka.inazuma@email.com.br</p>
                     </div>
                     <div class="contact-icons">
-                        <span class="material-symbols-outlined">delete</span>
-                        <span class="material-symbols-outlined">edit_square</span>
+                        <a href="#"><span class="material-symbols-outlined">delete</span></a>
+                        <a href="#"><span class="material-symbols-outlined">edit_square</span></a>
                     </div>
                 </li>
                 <li class="contacts">
                     <div class="contact-5star-img">
-                        <img src="/imgs/xianyun.png" alt="Nahida">
+                        <img src="/imgs/xianyun.png" alt="Xianyun">
                     </div>
                     <div class="contact-info">
                         <h2>Xianyun</h2>
                         <p>xianyun.liyue@email.com.br</p>
                     </div>
                     <div class="contact-icons">
-                        <span class="material-symbols-outlined">delete</span>
-                        <span class="material-symbols-outlined">edit_square</span>
+                        <a href="#"><span class="material-symbols-outlined">delete</span></a>
+                        <a href="#"><span class="material-symbols-outlined">edit_square</span></a>
                     </div>
                 </li>
                 <li class="contacts">
                     <div class="contact-4star-img">
-                        <img src="/imgs/chevreuse.png" alt="Nahida">
+                        <img src="/imgs/chevreuse.png" alt="Chevreuse">
                     </div>
                     <div class="contact-info">
                         <h2>Chevreuse</h2>
                         <p>chevreuse.fontaine@email.com.br</p>
                     </div>
                     <div class="contact-icons">
-                        <span class="material-symbols-outlined">delete</span>
-                        <span class="material-symbols-outlined">edit_square</span>
+                        <a href="#"><span class="material-symbols-outlined">delete</span></a>
+                        <a href="#"><span class="material-symbols-outlined">edit_square</span></a>
                     </div>
                 </li>
                 <li class="contacts">
                     <div class="contact-4star-img">
-                        <img src="/imgs/fischl.png" alt="Nahida">
+                        <img src="/imgs/fischl.png" alt="Fischl">
                     </div>
                     <div class="contact-info">
                         <h2>Fischl</h2>
                         <p>fischl.goldenapplearchipelogo@email.com.br</p>
                     </div>
                     <div class="contact-icons">
-                        <span class="material-symbols-outlined">delete</span>
-                        <span class="material-symbols-outlined">edit_square</span>
+                        <a href="#"><span class="material-symbols-outlined">delete</span></a>
+                        <a href="#"><span class="material-symbols-outlined">edit_square</span></a>
                     </div>
                 </li>
             </ul>
