--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <img src="/imgs/nahida.png" alt="Nahida">
                     </div>
                     <div class="contact-info">
-                        <h2>NahidaNahidaNahidaNahidaNahidaNahida</h2>
+                        <h2>Nahida</h2>
                         <p>nahida.sumeru@email.com.br</p>
                     </div>
                     <div class="contact-icons">
